[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>", "Henri Bourcereau <henri@bourcereau.fr>"]
description = "A library to model the Tarot card game."
keywords = ["tarot", "game", "cards"]
license = "MIT"
name = "tarotgame"
version = "0.6.0"
edition="2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive", "rc"] }
rand = "0.7.3"
strum = "0.18.0"
strum_macros = "0.18.0"
