[package]
name = "webtarot_bot"
version = "0.1.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
serde_json = "1.0.48"

webtarot_protocol = { path = "../webtarot_protocol" }
tarotgame = { path = "../tarotgame" }

uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.8"
rand = "0.7.3"
lazy_static = "1.4.0"
clap = "2.33.0"
