[package]
name = "webtarot_bot"
version = "0.4.2"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
serde_json = "1.0.48"

tarotgame = { path = "../tarotgame" }
webtarot_protocol = { path = "../webtarot_protocol" }

webgame_protocol = { git = "https://github.com/mmai/webgame", tag = "v0.7.5" }
# webgame_protocol = { path = "../../webgame/webgame_protocol" }

uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.8"
rand = "0.7.3"
lazy_static = "1.4.0"
clap = "2.33.0"
tungstenite = "0.11.1"
url = "2.2.0"
env_logger = "0.8.2"
native-tls = "0.2.7"
rayon = "1.5.0"
