[package]
name = "webtarot_client"
version = "0.3.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.2"
webtarot_protocol = { path = "../webtarot_protocol" }
tarotgame = { path = "../tarotgame" }
wasm-bindgen = "0.2.59"
web_logger = "0.2.0"
log = "0.4.8"
console_error_panic_hook = "0.1.6"
anyhow = "1.0.27"
uuid = "0.8.1"
serde = { version = "1.0.105", features = ["derive"] }
web-sys = { version = "0.3.36", features = [
  "Window",
  "Location",
  "HtmlDivElement",
  "HtmlAudioElement",
  "console"
  ] }                                 
im-rc = "14.3.0"                      
stdweb = "0.4.20"                     
strum = "0.18.0"                      
tr = { version = "0.1", default-features = false, features = ["gettext"] }
rust-embed = { version = "5.5.1", features = ["debug-embed"] }
i18n-embed = { version = "0.6", features = ["web-sys-requester"] }
js-sys = "0.3.40"
lazy_static = "1.4.0"
