[package]
name = "webtarot_client"
version = "0.6.1"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

# [package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# dwarf-debug-info = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
# webgame_protocol = { path = "../../webgame/webgame_protocol" }
webgame_protocol = { git = "https://github.com/mmai/webgame", tag = "v0.6.1" }
webtarot_protocol = { path = "../webtarot_protocol" }
tarotgame = { path = "../tarotgame" }
wasm-bindgen = "0.2.58"
# wasm-logger = "0.2"
# log = "0.4.8"
weblog = "0.3.0"
wee_alloc = { version = "0.4.4", optional = true }
console_error_panic_hook = "0.1.6"
anyhow = "1.0.27"
uuid = "0.8.1"
serde = { version = "1.0.105", features = ["derive"] }
web-sys = { version = "0.3.4", features = [
  "Window",
  "Location",
  "HtmlDivElement",
  "HtmlAudioElement",
  "console"
  ] }                                 
im-rc = "14.3.0"                      
strum = "0.18.0"                      
tr = { version = "0.1", default-features = false, features = ["gettext"] }
rust-embed = { version = "5.5.1", features = ["debug-embed"] }
i18n-embed = { version = "0.6", features = ["web-sys-requester"] }
js-sys = "0.3.40"
lazy_static = "1.4.0"
url = "2.2.0"

# [dev-dependencies]
# wasm-bindgen-test = "0.3"
