[package]
name = "webtarot_client"
version = "0.7.13"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-agent = "0.2"

# webgame_protocol = { path = "../../webgame/webgame_protocol" }
webgame_protocol = { git = "https://github.com/mmai/webgame", tag = "v0.8.0" }

webtarot_protocol = { path = "../webtarot_protocol" }
tarotgame = { path = "../tarotgame" }
wasm-bindgen = "0.2"
weblog = "0.3.0"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = "0.1.6"
anyhow = "1.0"
uuid = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
  "Window",
  "Location",
  "HtmlDivElement",
  "HtmlAudioElement",
  "HtmlInputElement",
  "WebSocket",
  "MessageEvent",
  "console",
] }
im-rc = "14.3.0"
strum = "0.19.0"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
rust-embed = { version = "6.8", features = ["debug-embed"] }
i18n-embed = { version = "0.13", features = [
  "gettext-system",
  "web-sys-requester",
] }
js-sys = "0.3"
lazy_static = "1.4.0"
url = "2.2.0"
chrono = "0.4"
gloo-timers = "0.2"
gloo-storage = "0.2"
