[package]
name = "webtarot_server"
version = "0.4.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[dependencies]
warp = "0.2.2"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["macros"] }
pretty_env_logger = "0.4.0"
serde_json = "1.0.48"

# webgame_server = { path = "../../webgame/webgame_server" }
# webgame_protocol = { path = "../../webgame/webgame_protocol" }
webgame_server = { git = "https://github.com/mmai/webgame" }
webgame_protocol = { git = "https://github.com/mmai/webgame"}
webtarot_protocol = { path = "../webtarot_protocol" }

uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.8"
rand = "0.7.3"
listenfd = "0.3.3"
hyper = "0.13.4"
lazy_static = "1.4.0"
clap = "2.33.0"
tokio-timer = "0.2.13"
